# soapy-ai-field-manual-search

./: .gitignore  CLAUDE.md  LICENSE  README.md  indexer.py  progress.md  pyproject.toml  requirements.txt
.streamlit/: config.toml  secrets.toml.example
data/: .gitignore
docs/: data_inventory.md  eval_plan.md  overview.md  prd.md  z_scripts_inventory.md
scripts/: app.py  cloud.py  indexer.py  z_scripts_inventory.md
tests/: conftest.py  test_cloud.py  test_golden.py  test_hygiene.py  test_integrity.py  test_protection.py
