[project]
name = "soapy-ai-field-manual-search"
version = "0.1.0"
description = "Gated, keyword-search-only showcase for the Soapy AI Field Manual (coverage + capped excerpts; no LLM)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.40",
]

# This is an app, not a distributable package — don't try to build/install the project itself.
[tool.uv]
package = false

# Dev-only; not in requirements.txt (the deploy mirror) since the host never runs tests.
[dependency-groups]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
testpaths = ["tests"]
